--- a/services.html
+++ b/services.html
@@ -50,11 +50,11 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
-      <p>By revealing people's attitudes, motivations and behaviours, we can help you shape more effective and inclusive strategies - both within nature conservation and beyond.</p>
-      <p>Our experience includes a variety of social science approaches, including...</p>
+      <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies - in nature conservation and beyond.</p>
+      <p>Our experience covers a variety of social science approaches, including...</p>
       <ul>
-        <li><strong>Questionnaire design</strong> - Including developing surveys of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and of people's attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
-        <li><strong>Stakeholder interviews & focus groups</strong> - Including to inform development of a <a href="https://doi.org/10.1002/2688-8319.12198">conservation strategy for hazel dormouse</a>.</li>
+        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014">of 18,000 adults across England</a> with Natural England, and of people's attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
+        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198">for hazel dormouse</a>.</li>
         <li><strong>Analysis of digital data sources</strong> - Including combining large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
       </ul>
     </div>
@@ -67,7 +67,7 @@
     <div class="sidepicture-text">
       <h2>3. Evidence Synthesis</h2>
       <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping you to make informed decisions based on the best available knowledge.</p>
-      <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
+      <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
@@ -86,8 +86,8 @@
       <p>This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
       <p>Our experience includes...</p>
       <ul>
-        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
-        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats using Google Earth and Street View</a>.</li>
+        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution</a> across Great Britain.</li>
+        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
         <li>Comparing light pollution levels across UK local authorities and habitats.</li>
       </ul>
     </div>
@@ -99,7 +99,7 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>5. Programme development</h2>
-      <p>We can provide you with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
+      <p>We can provide you with scientific support across all stages of grant writing and programme development - from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
       <p>Our experience includes...</p>
       <ul>
         <li><strong>Grant writing</strong> – Drawing on our experience as both applicants and reviewers, we can help craft compelling, impactful proposals that stand out.</li>
