--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
 </ul>
       
     </div>
-    <img src="images/bee-turtle.jpg" alt="" class="sidepicture-image">
+    <img src="images/bee-turtle.png" alt="" class="sidepicture-image">
   </div>
 </section>
 
