--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section style="width: 50%; margin: 3rem 0; text-align: left;">
+  <section style="width: 50%; margin: 3rem 0; text-align: center;">
   <h1>Our Services & Experience</h1>
 </section>
 
