--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section style="width: 58%; margin: 3rem 0; text-align: left;">
+  <section style="width: 58%; margin: 3rem 0; text-align: center;">
   <h2>Publications</h2>
 </section>
 
