--- a/services.html
+++ b/services.html
@@ -21,8 +21,9 @@
     </nav>
   </header>
 
-  <section style="width: 50%; margin: 3rem 0; text-align: center;">
-  <h1>Our Services & Experience</h1>
+  <section style="width: 50%; margin: 3rem 0; text-align: center; display: flex; align-items: center; justify-content: center;">
+  <img src="logo-apex-notext.png" alt="Apex Logo" style="height: 40px; margin-right: 1rem;">
+  <h1 style="margin: 0;">Our Services & Experience</h1>
 </section>
 
   <section style="width: 50%; margin: 3rem 0; text-align: left;">
