--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,10 @@
     </nav>
   </header>
 
-  <h1 style="text-align: center;">Publications</h1>
+  <h1 style="text-align: center;">
+  <img src="logo-apex-notext.png" alt="Apex Logo" style="height: 30px; vertical-align: middle; margin-right: 0.5rem;">
+  Publications
+</h1>
 
   <section>
   <p>
