--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@
   </header>
 
   <h1 style="text-align: center;">
-  <img src="logo-apex-notext.png" alt="Apex Logo" style="height: 30px; vertical-align: middle; margin-right: 0.5rem;">
+  <img src="image/logo-apex-notext.png" alt="Apex Logo" style="height: 30px; vertical-align: middle; margin-right: 0.5rem;">
   Publications
 </h1>
 
