--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,6 @@
   <meta name="description" content="Publications for Apex Science & Conservation Consultancy." />
   <title>Publications | Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,7 +23,7 @@
 
   <h1 style="text-align: center;">
   <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
-  Publications
+  PUBLICATIONS
 </h1>
 
   <section>
