--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 
   <h1 style="text-align: center;">
   <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
-  PUBLICATIONS
+  Publications
 </h1>
 
   <section>
