--- a/services.html
+++ b/services.html
@@ -21,16 +21,11 @@
     </nav>
   </header>
 
-  <h1>TEST</h1>
-
-  <section style="width: 50%; margin: 3rem 0; text-align: center; display: flex; align-items: center; justify-content: center;">
-  <img src="logo-apex-notext.png" alt="Apex Logo" style="height: 40px; margin-right: 1rem;">
-  <h1 style="margin: 0;">Our Services & Experience</h1>
-</section>
-
-  <section style="width: 50%; margin: 3rem 0; text-align: left;">
-  <h1>Our Services & Experience</h1>
-</section>
+  <h1 style="text-align: center;">
+  <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+  <b>Publications</b>
+    <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
 
 <section>
   <div class="sidepicture-section">
