--- a/testimonials.html
+++ b/testimonials.html
@@ -21,9 +21,11 @@
     </nav>
   </header>
 
-  <section style="width: 50%; margin: 3rem 0; text-align: center;">
-  <h2>Testimonials</h2>
-</section>
+  <h1 style="text-align: center;">
+  <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+  Testimonials
+    <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
   
   <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
 
