--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
 
   <h1 style="text-align: center;">
   <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
-  Publications
+  Our Services & Experience
     <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
 
