--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <h1 style="text-align: left;">
+  <h1 style="text-align: center;">
   <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
   Publications
     <img src="images/logo-apex-notext-dark.png" alt="Apex Logo" style="height: 40px; vertical-align: middle; margin-right: 0.5rem;">
