--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
       and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
       using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
-    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide data management and analysis, 
-      grant writing, programme development, and other consultancy services to support effective, evidence-based conservation.</p>
+    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide support with grant writing, programme development, 
+      data analysis, and other consultancy services, to support effective, evidence-based conservation.</p>
   </div>
   <img src="images/road-verge.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
