--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 </div>
 
     <p style="text-align: center; margin-top: 1.5rem;">
-  For further details on how we can support your work, see our 
+  For further details on how we can support you and your organisation, see our 
   <a href="services.html"><b>Services</b></a> page.
 </p>
   </section>
