--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
 
   <h1 style="text-align: center;">
   <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  Our Services & Experience
+  Our Services
     <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
 
@@ -31,12 +31,13 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
-<p>We offer support with ecological research - be it surveys or experiments - across both terrestrial and marine ecosystems. We are also able to provide practical management guidance.</p>
+<p>We offer support with ecological research - be it field surveys or experimental studies - across both terrestrial and marine environments. 
+  We can also provide you with practical, evidence-based guidance on the effective management of land and marine habitats.</p>
 <p>Our experience covers...</p>
 <ul>
-  <li><strong>Ecological studies</strong> - We can design and run surveys and experiments to help answer your ecological questions.
-  <li><strong>Habitat and land management</strong> – Including topics such as road verges, public green spaces, farmland, and pollinator habitats.</li>
-  <li><strong>Marine conservation</strong> – Including topics such as marine megafauna, fisheries, and the impacts of microplastics.</li>
+  <li><strong>Ecological studies</strong> - We can design and carry out surveys and experiments to help answer your ecological questions.
+  <li><strong>Habitat and land management</strong> – With particular expertise relating to road verges, public green spaces, farmland, and pollinator habitats.</li>
+  <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna, fisheries, and the impacts of microplastics.</li>
 </ul>
       
     </div>
