--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
 <p>We offer support with ecological research - be it field surveys or experimental studies - across both terrestrial and marine environments. 
-  We can also provide you with practical, evidence-based guidance on the effective management of land and marine habitats.</p>
+  We can work with you to find the most effective, evidence-based approaches for managing habitats in your particular setting.</p>
 <p>Our experience covers...</p>
 <ul>
   <li><strong>Ecological studies</strong> - We can design and carry out surveys and experiments to help answer your ecological questions.
