--- a/services.html
+++ b/services.html
@@ -50,11 +50,11 @@
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
       <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies - in nature conservation and beyond.</p>
-      <p>Our experience covers a variety of social science approaches, including...</p>
+      <p>We have experience with a range of social science methods, including...</p>
       <ul>
-        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014">of 18,000 adults across England</a> with Natural England, and of people's attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
-        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198">for hazel dormouse</a>.</li>
-        <li><strong>Analysis of digital data sources</strong> - Including combining large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
+        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014">of 18,000 adults across England</a> with Natural England, and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
+        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198">for hazel dormouse</a>.</li>
+        <li><strong>Analysis of digital data sources</strong> - Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381">trends in how people engage with nature</a>.</li>
       </ul>
     </div>
     <img src="images/social-science.jpg" alt="" class="sidepicture-image">
