--- a/services.html
+++ b/services.html
@@ -68,9 +68,9 @@
       <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
-        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
         <li>Plastic pollution and <a href="https://doi.org/10.3354/esr00865">marine turtle entanglements</a>.</li>
+        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       </ul>
     </div>
     <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
@@ -81,12 +81,13 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>4. Data Services</h2>
-      <p>We can assist you with managing, visualising and analysing ecological and social data.</p>
-      <p>This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
-      <p>Our experience includes...</p>
+      <p>We can help you with managing, visualising and analysing ecological and social data - 
+        transforming complex datasets into meaningful insights that support effective decision-making.</p>
+      <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
+      <p>Examples of our past work includes...</p>
       <ul>
-        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution</a> across Great Britain.</li>
         <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
+        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution</a> across Great Britain.</li>
         <li>Comparing light pollution levels across UK local authorities and habitats.</li>
       </ul>
     </div>
@@ -101,9 +102,9 @@
       <p>We can provide you with scientific support across all stages of grant writing and programme development - from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
       <p>Our experience includes...</p>
       <ul>
-        <li><strong>Grant writing</strong> – Drawing on our experience as both applicants and reviewers, we can help craft compelling, impactful proposals that stand out.</li>
+        <li><strong>Grant writing</strong> – With experience as both applicants and reviewers, we can help craft clear, compelling proposals that resonate with funders.</li>
         <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities.</li>
-        <li><strong>Capacity building & community engagement</strong> – Including work on gender, equality and inclusive participation in environmental initiatives.</li>
+        <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and inclusive participation in environmental initiatives.</li>
       </ul>
     </div>
     <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
