--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
       <p>We can help you with managing, visualising and analysing ecological and social data - 
         transforming complex datasets into meaningful insights that support effective decision-making.</p>
       <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
-      <p>Examples of our past work includes...</p>
+      <p>Examples of our past experience includes...</p>
       <ul>
         <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
         <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution</a> across Great Britain.</li>
