--- a/publications.html
+++ b/publications.html
@@ -29,19 +29,82 @@
 
   <section>
   <p>
-    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
+    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
-    <p>Between us, we have published more than XX academic papers, which have been cited more than XXXX times.</p>
+  <p>Between us, we have published more than XX academic papers, which have been cited more than XXXX times.</p>
 
+  <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips, B. et al. (2023).</b> Managing roadside verges for pollinator conservation. <i>Conservation Biology.</i> <a href="#">View publication</a>
+      <b>Author, A. et al. (Year).</b> Title of pollinator paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan, E. et al. (2022).</b> Global patterns of plastic ingestion in marine megafauna. <i>Nature Communications.</i> <a href="#">View publication</a>
+      <b>Author, B. et al. (Year).</b> Title of pollinator paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips, B. & Duncan, E. (2021).</b> Integrating ecological and social sciences for effective conservation. <i>Ecology & Society.</i> <a href="#">View publication</a>
+      <b>Author, C. et al. (Year).</b> Title of pollinator paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+  </ul>
+
+  <h3>Marine Plastic Pollution</h3>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Author, D. et al. (Year).</b> Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, E. et al. (Year).</b> Title of marine plastic paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, F. et al. (Year).</b> Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+  </ul>
+
+  <h3>Social Science in Conservation</h3>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Duncan ED, Phillips BB, et al. (in prep).</b> Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: a survey of fishers to reveal current practices and potential solutions.
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. <i>People and Nature</i>. 
+      <a href="https://doi.org/10.1002/pan3.70014">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, the hazel dormouse Muscardinus avellanarius. <i>Ecological Solutions and Evidence</i>. 
+      <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>. 
+      <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. <i>People and Nature</i>. 
+      <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
+    </li>
+  </ul>
+
+  <h3>Spatial Data & Environmental Modelling</h3>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Author, J. et al. (Year).</b> Title of spatial modelling paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, K. et al. (Year).</b> Title of spatial modelling paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, L. et al. (Year).</b> Title of spatial modelling paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+  </ul>
+
+  <h3>Programme Design & Impact</h3>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Author, M. et al. (Year).</b> Title of programme development paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, N. et al. (Year).</b> Title of programme development paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Author, O. et al. (Year).</b> Title of programme development paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
 </section>
