--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,7 @@
 
   <h3>Marine Plastic Pollution</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
       <b>Author, D. et al. (Year).</b> Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
