--- a/publications.html
+++ b/publications.html
@@ -36,10 +36,19 @@
   <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Author, A. et al. (Year).</b> Title of pollinator paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+    <b>Süle, ..., Phillips, et al. (2025).</b> Pollinator-Promoting Interventions in European Urban Habitats - A Synthesis. <i>Ecology Letters</i>. 
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Author, B. et al. (Year).</b> Title of pollinator paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. <i>Landscape Ecology</i>. 
+      <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2018).</b> Drought reduces floral resources for pollinators. <i>Global Change Biology</i>. 
+      <a href="https://doi.org/10.1111/gcb.14130">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). <i>Basic and Applied Ecology</i>. 
+      <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Author, C. et al. (Year).</b> Title of pollinator paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
@@ -63,7 +72,7 @@
   <h3>Social Science in Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Duncan ED, Phillips BB, et al. (in prep).</b> Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: a survey of fishers to reveal current practices and potential solutions.
+      <b>Duncan, Phillips, et al. (in prep).</b> Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: a survey of fishers to reveal current practices and potential solutions.
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. <i>People and Nature</i>. 
