--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,30 @@
     </li>
   </ul>
 
+    <h3>Roads & Road Verges</h3>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>. 
+      <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>. 
+      <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>. 
+      <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>. 
+      <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. <i>Journal of Applied Ecology</i>. 
+      <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
+    </li>
+  </ul>
+
   <h3>Marine Plastic Pollution</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
