--- a/publications.html
+++ b/publications.html
@@ -66,6 +66,10 @@
       <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>. 
+      <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
     </li>
