--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
   <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-    <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-Promoting Interventions in European Urban Habitats - A Synthesis. <i>Ecology Letters</i>. 
+    <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. <i>Landscape Ecology</i>. 
