--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
-  <p>Between us, we have published more than XX academic papers, which have been cited more than XXXX times.</p>
+  <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times.</p>
 
   <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
