--- a/publications.html
+++ b/publications.html
@@ -36,11 +36,8 @@
   <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-    <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. <i>Landscape Ecology</i>. 
-      <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
+      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. <i>People and Nature</i>. 
+      <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2018).</b> Drought reduces floral resources for pollinators. <i>Global Change Biology</i>. 
@@ -50,32 +47,39 @@
       <b>Phillips et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). <i>Basic and Applied Ecology</i>. 
       <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. <i>Landscape Ecology</i>. 
+      <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+    <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
+    </li>
 
     <h3>Roads & Road Verges</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>. 
-      <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
+      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>. 
+      <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. <i>Journal of Applied Ecology</i>. 
+      <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>. 
       <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>. 
-      <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>. 
-      <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
+      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>. 
+      <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>. 
       <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. <i>Journal of Applied Ecology</i>. 
-      <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
+      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>. 
+      <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
 
@@ -103,16 +107,16 @@
       <a href="https://doi.org/10.1002/pan3.70014">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, the hazel dormouse Muscardinus avellanarius. <i>Ecological Solutions and Evidence</i>. 
-      <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>. 
       <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. <i>People and Nature</i>. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, the hazel dormouse Muscardinus avellanarius. <i>Ecological Solutions and Evidence</i>. 
+      <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
   </ul>
 
