--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,9 @@
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
   <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times.</p>
+  </section>
 
+  <section>
   <h3>Pollinator Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -54,7 +56,10 @@
     <li style="margin-bottom: 1rem;">
     <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
     </li>
+  </ul>
+  </section>
 
+  <section>
     <h3>Roads & Road Verges</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -82,7 +87,9 @@
       <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
+  </section>
 
+  <section>
   <h3>Marine Plastic Pollution</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
@@ -96,7 +103,9 @@
       <b>Author, F. et al. (Year).</b> Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
+  </section>
 
+  <section>
   <h3>Social Science in Conservation</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -119,7 +128,9 @@
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
   </ul>
+  </section>
 
+  <section>
   <h3>Programme Design & Impact</h3>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
