--- a/publications.html
+++ b/publications.html
@@ -31,9 +31,19 @@
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
-  <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times.</p>
+  <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
   </section>
 
+  <section>
+  <h2>Recent Projects</h2>
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips (2025).</b> Environmental connections between forests and oceans. <i>A scoping review for the Woodland Trust</i>. 
+      <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
+    </li>
+  </ul>
+  </section>
+  
   <section>
   <h2>Pollinator Conservation</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
